--- a/config/config.toml
+++ b/config/config.toml
@@ -219,7 +219,7 @@ fit_period = "60m"
 # The number of epochs for model fitting. The default value is 100.
 fit_epoch = 100
 
-# The time period for hyperparameter optimization. The default value is "360m".
+# The time period for hyperparameter optimization, set to 0 to disable. The default value is "0".
 optimize_period = "360m"
 
 # The number of trials for hyperparameter optimization. The default value is 10.
@@ -260,7 +260,7 @@ fit_period = "60m"
 # The number of epochs for model fitting. The default value is 100.
 fit_epoch = 100
 
-# The time period for hyperparameter optimization. The default value is "360m".
+# The time period for hyperparameter optimization, set to 0 to disable. The default value is "0".
 optimize_period = "360m"
 
 # The number of trials for hyperparameter optimization. The default value is 10.
