--- a/cmd/gorse-master/Dockerfile.mkl
+++ b/cmd/gorse-master/Dockerfile.mkl
@@ -32,7 +32,8 @@ RUN --mount=type=cache,target=/root/.cache/go-build \
     go build -tags mkl -ldflags=" \
        -X 'github.com/gorse-io/gorse/cmd/version.Version=$(git describe --tags $(git rev-parse HEAD))' \
        -X 'github.com/gorse-io/gorse/cmd/version.GitCommit=$(git rev-parse HEAD)' \
-       -X 'github.com/gorse-io/gorse/cmd/version.BuildTime=$(date)'" .
+       -X 'github.com/gorse-io/gorse/cmd/version.BuildTime=$(date)' \
+       -X 'github.com/gorse-io/gorse/config.RootDir=/'" .
 
 ############################
 # STEP 2 build runtime image
