--- a/cmd/gorse-server/Dockerfile
+++ b/cmd/gorse-server/Dockerfile
@@ -22,7 +22,8 @@ RUN --mount=type=cache,target=/root/.cache/go-build \
     GOOS=${TARGETOS} GOARCH=${TARGETARCH} CGO_ENABLED=0 go build -ldflags=" \
     -X 'github.com/gorse-io/gorse/cmd/version.Version=$(git describe --tags $(git rev-parse HEAD))' \
     -X 'github.com/gorse-io/gorse/cmd/version.GitCommit=$(git rev-parse HEAD)' \
-    -X 'github.com/gorse-io/gorse/cmd/version.BuildTime=$(date)'" .
+    -X 'github.com/gorse-io/gorse/cmd/version.BuildTime=$(date)' \
+    -X 'github.com/gorse-io/gorse/config.RootDir=/'" .
 
 ############################
 # STEP 2 build a small image
