--- a/config/config.toml
+++ b/config/config.toml
@@ -302,11 +302,11 @@ recommenders = ["item-to-item/neighbors", "latest"]
 # Enable tracing for REST APIs. The default value is false.
 enable_tracing = false
 
-# The type of tracing exporters should be one of "jaeger", "zipkin", "otlp" and "otlphttp". The default value is "jaeger".
-exporter = "jaeger"
+# The type of tracing exporters should be one of "zipkin", "otlp" and "otlphttp". The default value is "otlp".
+exporter = "otlp"
 
 # The endpoint of tracing collector.
-collector_endpoint = "http://localhost:14268/api/traces"
+collector_endpoint = "http://localhost:4317"
 
 # The type of tracing sampler should be one of "always", "never" and "ratio". The default value is "always".
 sampler = "always"
@@ -333,6 +333,30 @@ client_secret = ""
 # Gorse dashboard URL and "/callback/oauth2". For example, if the Gorse dashboard URL is 
 # http://localhost:8088, the redirect URL should be: http://localhost:8088/callback/oauth2
 redirect_url = ""
+
+[blob]
+
+# Blob storage URI.
+#   - S3: s3://bucket/path
+#   - GCS: gs://my-bucket/my-database
+#   - Local: /path/without/prefix
+uri = ""
+
+[blob.s3]
+
+# S3 endpoint.
+endpoint = ""
+
+# S3 access key ID.
+access_key_id = ""
+
+# S3 secret access key.
+secret_access_key = ""
+
+[blob.gcs]
+
+# GCS credentials file.
+credentials_file = ""
 
 [openai]
 
