Remove config file argument from ENTRYPOINT in Dockerfiles

--- a/cmd/gorse-in-one/Dockerfile.mkl
+++ b/cmd/gorse-in-one/Dockerfile.mkl
@@ -46,4 +46,4 @@ RUN /usr/bin/gorse-in-one --version
 
 ENV USER root
 
-ENTRYPOINT ["/usr/bin/gorse-in-one", "-c", "/etc/gorse/config.toml"]
+ENTRYPOINT ["/usr/bin/gorse-in-one"]
