--- a/cmd/gorse-master/Dockerfile.openblas
+++ b/cmd/gorse-master/Dockerfile.openblas
@@ -73,4 +73,4 @@ RUN /usr/bin/gorse-master --version
 
 ENV USER root
 
-ENTRYPOINT ["/usr/bin/gorse-master", "-c", "/etc/gorse/config.toml"]
+ENTRYPOINT ["/usr/bin/gorse-master"]
