Update RootDir paths in Dockerfiles and configuration to /var/lib/gorse

--- a/cmd/gorse-in-one/Dockerfile.cuda
+++ b/cmd/gorse-in-one/Dockerfile.cuda
@@ -27,7 +27,7 @@ RUN --mount=type=cache,target=/root/.cache/go-build \
        -X 'github.com/gorse-io/gorse/cmd/version.Version=$(git describe --tags $(git rev-parse HEAD))' \
        -X 'github.com/gorse-io/gorse/cmd/version.GitCommit=$(git rev-parse HEAD)' \
        -X 'github.com/gorse-io/gorse/cmd/version.BuildTime=$(date)' \
-       -X 'github.com/gorse-io/gorse/config.RootDir=/'" . && \
+       -X 'github.com/gorse-io/gorse/config.RootDir=/var/lib/gorse'" . && \
        mv gorse-in-one /usr/bin
 
 ############################
