--- a/cmd/gorse-master/Dockerfile.mkl
+++ b/cmd/gorse-master/Dockerfile.mkl
@@ -33,7 +33,7 @@ RUN --mount=type=cache,target=/root/.cache/go-build \
        -X 'github.com/gorse-io/gorse/cmd/version.Version=$(git describe --tags $(git rev-parse HEAD))' \
        -X 'github.com/gorse-io/gorse/cmd/version.GitCommit=$(git rev-parse HEAD)' \
        -X 'github.com/gorse-io/gorse/cmd/version.BuildTime=$(date)' \
-       -X 'github.com/gorse-io/gorse/config.RootDir=/'" .
+       -X 'github.com/gorse-io/gorse/config.RootDir=/var/lib/gorse'" .
 
 ############################
 # STEP 2 build runtime image
