--- a/storage/docker-compose.yml
+++ b/storage/docker-compose.yml
@@ -43,3 +43,9 @@ services:
     environment:
       RUSTFS_ACCESS_KEY: rustfsadmin
       RUSTFS_SECRET_KEY: rustfsadmin
+
+  azurite:
+    image: mcr.microsoft.com/azure-storage/azurite:3.34.0
+    ports:
+      - 10000:10000
+    command: azurite-blob --blobHost 0.0.0.0 --blobPort 10000
