Update ENTRYPOINT in Dockerfiles to include config file argument and enhance config loading error handling

--- a/cmd/gorse-in-one/Dockerfile
+++ b/cmd/gorse-in-one/Dockerfile
@@ -37,4 +37,4 @@ COPY --from=0 /usr/bin/gorse-in-one /usr/bin/gorse-in-one
 
 ENV USER root
 
-ENTRYPOINT ["/usr/bin/gorse-in-one"]
+ENTRYPOINT ["/usr/bin/gorse-in-one", "-c", "/etc/gorse/config.toml"]
