--- a/cmd/gorse-in-one/Dockerfile.cuda
+++ b/cmd/gorse-in-one/Dockerfile.cuda
@@ -43,4 +43,4 @@ RUN /usr/bin/gorse-in-one --version
 
 ENV USER root
 
-ENTRYPOINT ["/usr/bin/gorse-in-one"]
+ENTRYPOINT ["/usr/bin/gorse-in-one", "-c", "/etc/gorse/config.toml"]
