--- a/cmd/gorse-in-one/Dockerfile.openblas
+++ b/cmd/gorse-in-one/Dockerfile.openblas
@@ -73,4 +73,4 @@ RUN /usr/bin/gorse-in-one --version
 
 ENV USER root
 
-ENTRYPOINT ["/usr/bin/gorse-in-one"]
+ENTRYPOINT ["/usr/bin/gorse-in-one", "-c", "/etc/gorse/config.toml"]
