--- a/client/config.toml
+++ b/client/config.toml
@@ -133,6 +133,11 @@ type = "items"
 
 [recommend.collaborative]
 
+# The type of collaborative filtering. Supported values:
+#   none: disable collaborative filtering.
+#   mf: matrix factorization.
+type = "mf"
+
 # The time period for model fitting. The default value is "60m".
 fit_period = "60m"
 
@@ -175,7 +180,7 @@ check_recommend_period = "1m"
 refresh_recommend_period = "24h"
 
 # The recommenders used to fetch candidate items before ranking. The default values is all recommenders.
-recommenders = ["latest", "collaborative", "non-personalized/most_starred_weekly", "item-to-item/neighbors", "user-to-user/neighbors"]
+recommenders = ["latest", "collaborative", "item-to-item/neighbors", "user-to-user/neighbors"]
 
 [recommend.ranker.early_stopping]
 
