Update blob storage URI in config.toml to point to local path

--- a/config/config.toml
+++ b/config/config.toml
@@ -346,7 +346,7 @@ redirect_url = ""
 #   - GCS: gs://my-bucket/my-database
 #   - Azure Blob: az://container/path
 #   - Local: /path/without/prefix
-uri = ""
+uri = "/var/lib/gorse/blob"
 
 [blob.s3]
 
