--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -300,16 +300,13 @@ jobs:
       - name: Build Docker image
         run: docker build -t zhenghaoz/gorse-in-one -f ./cmd/gorse-in-one/Dockerfile .
       - name: Run playground
-        run: docker run -d -p 8088:8088 --name playground zhenghaoz/gorse-in-one --playground
+        run: docker run -d -p 8088:8088 zhenghaoz/gorse-in-one --playground
       - name: Check dashboard URL
         uses: jtalk/url-health-check-action@v4
         with:
           url: http://localhost:8088
           max-attempts: 10
           retry-delay: 6s
-      - name: Check logs on failure
-        if: failure()
-        run: docker logs playground
 
   golangci:
     name: lint
