feat: add Milvus support with Docker integration
- Updated docker-compose.yml to include Milvus, etcd, and MinIO services.
- Added MilvusPrefix constant in scheme.go for URL handling.
- Implemented Milvus database interactions in a new milvus.go file, including methods for collection management and vector operations.
- Created milvus_test.go for testing Milvus integration with environment variable configuration.

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -114,6 +114,11 @@ jobs:
     - name: Install and start Azurite
       uses: potatoqualitee/azuright@v1
 
+    - name: Setup Milvus
+      run: |
+        curl -sfL https://raw.githubusercontent.com/milvus-io/milvus/master/scripts/standalone_embed.sh -o standalone_embed.sh
+        bash standalone_embed.sh start
+
     - name: Test
       run: go test -timeout 30m -v ./... -coverprofile=coverage.txt -covermode=atomic -coverpkg=./...
       env:
