--- a/cmd/gorse-worker/Dockerfile.cuda
+++ b/cmd/gorse-worker/Dockerfile.cuda
@@ -23,7 +23,7 @@ RUN cd common/blas/cublas && make
 
 RUN --mount=type=cache,target=/root/.cache/go-build \
     cd cmd/gorse-worker && \
-    go build -tags cuda -ldflags=" \
+    go build -tags xla -ldflags=" \
        -X 'github.com/gorse-io/gorse/cmd/version.Version=$(git describe --tags $(git rev-parse HEAD))' \
        -X 'github.com/gorse-io/gorse/cmd/version.GitCommit=$(git rev-parse HEAD)' \
        -X 'github.com/gorse-io/gorse/cmd/version.BuildTime=$(date)' \
